option java_package = "com.kuaikai.game.hall.msg.pb";  
option java_outer_classname="SDeskInfoPB";  

package hall;

import "common/DeskInfo.proto";

message SDeskInfo {	// 大厅牌桌信息

	required common.DeskInfo desk = 1;						// 牌桌信息

}
